--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   position: absolute;
   top: 120px;
   right: -50px;
-  display: block;
+  display: none;
 }
 #main #socials #triangle {
   position: absolute;
