--- a/style.scss
+++ b/style.scss
@@ -95,7 +95,7 @@ body{
         position: absolute;
         top: 120px;
         right: -50px;
-        display: block;
+        display: none;
 
         #triangle{
     position: absolute;
